eglext.odin


NV_stream_origin             :: 1
STREAM_FRAME_ORIGIN_X_NV      :: 0x3366
STREAM_FRAME_ORIGIN_Y_NV      :: 0x3367
STREAM_FRAME_MAJOR_AXIS_NV    :: 0x3368
CONSUMER_AUTO_ORIENTATION_NV  :: 0x3369
PRODUCER_AUTO_ORIENTATION_NV  :: 0x336A
LEFT_NV                       :: 0x336B
RIGHT_NV                      :: 0x336C
TOP_NV                        :: 0x336D
BOTTOM_NV                     :: 0x336E
X_AXIS_NV                     :: 0x336F
Y_AXIS_NV                     :: 0x3370
NV_stream_remote             :: 1
STREAM_STATE_INITIALIZING_NV  :: 0x3240
STREAM_TYPE_NV                :: 0x3241
STREAM_PROTOCOL_NV            :: 0x3242
STREAM_ENDPOINT_NV            :: 0x3243
STREAM_LOCAL_NV               :: 0x3244
STREAM_PRODUCER_NV            :: 0x3247
STREAM_CONSUMER_NV            :: 0x3248
STREAM_PROTOCOL_FD_NV         :: 0x3246
NV_stream_reset              :: 1
SUPPORT_RESET_NV              :: 0x3334
SUPPORT_REUSE_NV              :: 0x3335

PFNEGLRESETSTREAMNVPROC :: proc "c" (dpy: Display, stream: StreamKHR) -> b32

NV_stream_socket          :: 1
STREAM_PROTOCOL_SOCKET_NV     :: 0x324B
SOCKET_HANDLE_NV              :: 0x324C
SOCKET_TYPE_NV                :: 0x324D
NV_stream_socket_inet     :: 1
SOCKET_TYPE_INET_NV           :: 0x324F
NV_stream_socket_unix     :: 1
SOCKET_TYPE_UNIX_NV           :: 0x324E
NV_stream_sync            :: 1
SYNC_NEW_FRAME_NV             :: 0x321F

PFNEGLCREATESTREAMSYNCNVPROC :: proc "c" (dpy: Display, stream: StreamKHR, type: Enum, attrib_list: ^i32) -> SyncKHR

NV_sync :: 1

SyncNV :: distinct rawptr

SYNC_PRIOR_COMMANDS_COMPLETE_NV :: 0x30E6
SYNC_STATUS_NV                  :: 0x30E7
SIGNALED_NV                     :: 0x30E8
UNSIGNALED_NV                   :: 0x30E9
SYNC_FLUSH_COMMANDS_BIT_NV      :: 0x0001
FOREVER_NV                      :: 0xFFFFFFFFFFFFFFFF
ALREADY_SIGNALED_NV             :: 0x30EA
TIMEOUT_EXPIRED_NV              :: 0x30EB
CONDITION_SATISFIED_NV          :: 0x30EC
SYNC_TYPE_NV                    :: 0x30ED
SYNC_CONDITION_NV               :: 0x30EE
SYNC_FENCE_NV                   :: 0x30EF

PFNEGLCREATEFENCESYNCNVPROC :: proc "c" (dpy: Display, condition: Enum, attrib_list: ^i32) -> SyncNV
PFNEGLDESTROYSYNCNVPROC     :: proc "c" (sync: SyncNV) -> b32
PFNEGLFENCENVPROC           :: proc "c" (sync: SyncNV) -> b32
PFNEGLCLIENTWAITSYNCNVPROC  :: proc "c" (sync: SyncNV, flags: i32, timeout: time.Time) -> i32
PFNEGLSIGNALSYNCNVPROC      :: proc "c" (sync: SyncNV, mode: Enum) -> b32
PFNEGLGETSYNCATTRIBNVPROC   :: proc "c" (sync: SyncNV, attribute: i32, value: ^i32) -> b32

NV_system_time :: 1

PFNEGLGETSYSTEMTIMEFREQUENCYNVPROC :: proc "c" () -> u64
PFNEGLGETSYSTEMTIMENVPROC          :: proc "c" () -> u64

NV_triple_buffer           :: 1
TRIPLE_BUFFER_NV              :: 0x3230
QNX_image_native_buffer    :: 1
NATIVE_BUFFER_QNX             :: 0x3551
QNX_platform_screen        :: 1
PLATFORM_SCREEN_QNX           :: 0x3550
TIZEN_image_native_buffer  :: 1
NATIVE_BUFFER_TIZEN           :: 0x32A0
TIZEN_image_native_surface :: 1
NATIVE_SURFACE_TIZEN          :: 0x32A1
WL_bind_wayland_display    :: 1

wl_display  :: struct {}
wl_resource :: struct {}

WAYLAND_BUFFER_WL             :: 0x31D5
WAYLAND_PLANE_WL              :: 0x31D6
TEXTURE_Y_U_V_WL              :: 0x31D7
TEXTURE_Y_UV_WL               :: 0x31D8
TEXTURE_Y_XUXV_WL             :: 0x31D9
TEXTURE_EXTERNAL_WL           :: 0x31DA
WAYLAND_Y_INVERTED_WL         :: 0x31DB

PFNEGLBINDWAYLANDDISPLAYWLPROC   :: proc "c" (dpy: Display, display: ^wl_display) -> b32
PFNEGLUNBINDWAYLANDDISPLAYWLPROC :: proc "c" (dpy: Display, display: ^wl_display) -> b32
PFNEGLQUERYWAYLANDBUFFERWLPROC   :: proc "c" (dpy: Display, buffer: ^wl_resource, attribute: i32, value: ^i32) -> b32

WL_create_wayland_buffer_from_image :: 1

wl_buffer                                :: struct {}
PFNEGLCREATEWAYLANDBUFFERFROMIMAGEWLPROC :: proc "c" (dpy: Display, image: ImageKHR) -> ^wl_buffer
